fixing the alignment within tab list

--- a/group/blocks/tabs/tabs.css
+++ b/group/blocks/tabs/tabs.css
@@ -85,7 +85,6 @@
   border-bottom: 1px solid var(--secondary-color);
 }
 
-.tabs .tabs-panel ul li a {
   display: flex;
   justify-content: space-between;
   width: 100%;
